# MabiMe

./: .gitignore  CMakeLists.txt  mabimeglwidget.cpp  mabimeglwidget.h
PackReader/: mabipackreader.h  packmanager.cpp
Shaders/: bone.f
